--- a/allmychanges/static/allmychanges/stylus/common.styl
+++ b/allmychanges/static/allmychanges/stylus/common.styl
@@ -160,9 +160,9 @@ body.email {
     margin-left: 1em;
 }
 
-section-item-plate(text, color) {
+.changelog-item-type {
+      background-color: purple;
       content: text;
-      background-color: color;
       position: absolute;
       margin-left: -40px;
       font-size: 12px;
@@ -176,25 +176,26 @@ section-item-plate(text, color) {
       margin-top: 5px;
 }
 
-.package-version__section-item_fix:before {
-    section-item-plate("fix", #ee883d)
+.changelog-item-type_fix {
+      background-color: #ee883d;
 }
 
-.package-version__section-item_new:before {
-    section-item-plate("new", #5fbe40)
+.changelog-item-type_new {
+      background-color: #5fbe40;
 }
 
-.package-version__section-item_sec:before {
-    section-item-plate("sec", #ff3b16)
+.changelog-item-type_security {
+      background-color: #ff3b16;
 }
 
-.package-version__section-item_dep:before {
-    section-item-plate("dep", #ff3b16)
+.changelog-item-type_dep {
+      background-color: #ff3b16;
 }
 
-.package-version__section-item_inc:before {
-    section-item-plate("inc", #ff3b16)
+.changelog-item-type_inc {
+      background-color: #ff3b16;
 }
+
 
 /* autocomplete */
 .autocomplete-input {
